<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_positioning"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/action_my_location"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_manage_city"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_manage_city"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_my_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit_app"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>